--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/material-nextjs": "^5.15.11",
+    "@testing-library/user-event": "^14.5.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
