--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
+    "test": "jest --testPathPattern=app/",
     "test:e2e": "playwright test --project=chromium"
   },
   "dependencies": {
