--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.6.0",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/material-nextjs": "^5.15.11",
@@ -23,7 +24,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-hook-form-mui": "^7.0.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.44.1",
